--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -44,8 +44,8 @@ jobs:
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
           filename: coverage/cobertura-coverage.xml
-          format: 'markdown'
-          output: 'both'
+          format: "markdown"
+          output: "both"
       - name: Add coverage PR comment
         uses: marocchino/sticky-pull-request-comment@v2.5.0
         with:
