--- a/.releaserc
+++ b/.releaserc
@@ -14,11 +14,12 @@
       "@semantic-release/git",
       {
         "assets": [
+          "index.js",
           "CHANGELOG.md",
           "package.json",
           "yarn.lock"
         ],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        "message": "chore: release ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
     "@semantic-release/npm"
